@@ -24,4 +24,14 @@
     font-size: 2em
     font-weight: bold
 
-  
+#error
+  border: 2px solid #fff
+  background: #ff0000
+  color: #fff
+  font-weight: bold
+  display: none
+  padding: 3px
+  position: fixed
+  right: 20px
+  top: 25px
+  z-index: 99999
