@@ -14,6 +14,8 @@
     %meta(name="description" content="#{yield(:seo_description)}")
     
   %body.two-column{:id => "#{controller.controller_name}_#{controller.action_name}"}
+    #error
+      = t('twitter.flash_error')
     #header
       .logo
         - link_to "/" do
