@@ -1,4 +1,8 @@
-$('#tweet').hide('slow');
-$('#tweet textarea').val('');
-$('#tweet .close').click();
+- unless @error
+  $('#tweet').hide('slow');
+  $('#tweet textarea').val('');
+  $('#tweet .close').click();
+- else
+  $('#error').show('fast').delay(3000).hide('slow');
+
 
