@@ -5,6 +5,7 @@ Version 0.3.2
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Fixed the issue with edit today topic
+  * Error message when twitter fails to respond
 
 17.07.2010
 ==========
